Gateway-Kong.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testsdf
  annotations:
    configuration.konghq.com: testsdf
spec:
  rules:
  - http:
      paths:
      - path: /testsdf
        backend:
          serviceName: testsdf
          servicePort:
